# ggml

./: .gitignore
examples/: CMakeLists.txt
examples/kogpt/: CMakeLists.txt  README.md  convert-h5-to-ggml.py  main.cpp  main.old.cpp  quantize.cpp
examples/polyglot6b/: CMakeLists.txt  README.md  main.cpp  quantize.cpp
